--- a/Game.html
+++ b/Game.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="Css/worldMap.css">
@@ -9,10 +9,12 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="js/Helper/Selector.js" ></script>
         <script type="text/javascript" src="js/Helper/SaveLoad.js" ></script>
-        <script type="text/javascript" src="js/Helper/DragAndDrop.js" ></script>
+        <script type="text/javascript" src="js/Helper/DragAndDropReserve.js" ></script>
+        <script type="text/javascript" src="js/Helper/DragAndDropFusion.js" ></script>
         <script type="text/javascript" src="js/Helper/Maths.js" ></script>
         <script type="text/javascript" src="js/Helper/Display.js" ></script>
         <script type="text/javascript" src="js/Helper/Menu.js" ></script>
+        <script type="text/javascript" src="js/Helper/Fusion.js" ></script>
         <script type="text/javascript" src="js/Modeles/Ennemie.js" ></script>
         <script type="text/javascript" src="js/Modeles/GamingElement.js" ></script>
         <script type="text/javascript" src="js/Modeles/Player.js" ></script>
@@ -21,9 +23,13 @@
         <script type="text/javascript" src="js/Modeles/Equipement.js" ></script>
         <script type="text/javascript" src="js/Modeles/Reserve.js" ></script>
         <script type="text/javascript" src="js/Modeles/Carte.js" ></script>
+        <script type="text/javascript" src="js/Modeles/Fusion.js" ></script>
+        <script type="text/javascript" src="js/Modeles/Evolution.js" ></script>
+        <script type="text/javascript" src="js/Modeles/MainMenu.js" ></script>
         <script type="text/javascript" src="js/combat.js" ></script>
         <script type="text/javascript" src="js/Maps/worldMap.js"></script>
         <script type="text/javascript" src="js/startingScreen.js" ></script>
+        <script type="text/javascript" src="js/Monsters.js" ></script>
     </head>
     <body>
     </body>
