--- a/Game.html
+++ b/Game.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="Css/worldMap.css">
         <link rel="stylesheet" type="text/css" href="Css/Combat.css">
         <link rel="stylesheet" type="text/css" href="Css/StartingScreen.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script src="jquery/jquery.js"></script>
+        <script src="bootstrap/js/bootstrap.js"></script>
+        <script type="text/javascript" src="js/Helper/Strings.js" ></script>
         <script type="text/javascript" src="js/Helper/Selector.js" ></script>
         <script type="text/javascript" src="js/Helper/SaveLoad.js" ></script>
         <script type="text/javascript" src="js/Helper/DragAndDropReserve.js" ></script>
