modification gestion animation

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <script type="text/javascript" src="js/Helper/Display.js" ></script>
         <script type="text/javascript" src="js/Helper/Menu.js" ></script>
         <script type="text/javascript" src="js/Helper/Fusion.js" ></script>
+        <script type="text/javascript" src="js/Helper/Animate.js" ></script>
         <script type="text/javascript" src="js/Modeles/Ennemie.js" ></script>
         <script type="text/javascript" src="js/Modeles/GamingElement.js" ></script>
         <script type="text/javascript" src="js/Modeles/Player.js" ></script>
