--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <script type="text/javascript" src="js/Modeles/Fusion.js" ></script>
         <script type="text/javascript" src="js/Modeles/Evolution.js" ></script>
         <script type="text/javascript" src="js/Modeles/MainMenu.js" ></script>
+        <script type="text/javascript" src="js/Modeles/Items.js" ></script>
         <script type="text/javascript" src="js/combat.js" ></script>
         <script type="text/javascript" src="js/Maps/worldMap.js"></script>
         <script type="text/javascript" src="js/startingScreen.js" ></script>
