modification vue combat

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <script type="text/javascript" src="js/Helper/Menu.js" ></script>
         <script type="text/javascript" src="js/Helper/Fusion.js" ></script>
         <script type="text/javascript" src="js/Helper/Animate.js" ></script>
+        <script type="text/javascript" src="js/Helper/Array.js" ></script>
         <script type="text/javascript" src="js/Modeles/Ennemie.js" ></script>
         <script type="text/javascript" src="js/Modeles/GamingElement.js" ></script>
         <script type="text/javascript" src="js/Modeles/Player.js" ></script>
@@ -33,10 +34,12 @@
         <script type="text/javascript" src="js/Modeles/Evolution.js" ></script>
         <script type="text/javascript" src="js/Modeles/MainMenu.js" ></script>
         <script type="text/javascript" src="js/Modeles/Items.js" ></script>
-        <script type="text/javascript" src="js/combat.js" ></script>
-        <script type="text/javascript" src="js/Maps/worldMap.js"></script>
-        <script type="text/javascript" src="js/startingScreen.js" ></script>
+        <script type="text/javascript" src="js/View/Combat/CombatView.js" ></script>        
+        <script type="text/javascript" src="js/View/worldMap.js"></script>
+        <script type="text/javascript" src="js/View/startingScreen.js" ></script>
+        <script type="text/javascript" src="js/Controller/CombatController.js" ></script>
         <script type="text/javascript" src="js/Monsters.js" ></script>
+        <script type="text/javascript" src="js/Apps/CombatApp.js" ></script>
     </head>
     <body>
     </body>
