ajout des effets secondaires (poison)

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <script type="text/javascript" src="js/Modeles/MainMenu.js" ></script>
         <script type="text/javascript" src="js/Modeles/Items.js" ></script>
         <script type="text/javascript" src="js/Modeles/Modele.js" ></script>
+        <script type="text/javascript" src="js/Modeles/Effect.js" ></script>
         <script type="text/javascript" src="js/View/Combat/CombatView.js" ></script>
         <script type="text/javascript" src="js/View/Menu/MainMenuView.js" ></script>
         <script type="text/javascript" src="js/View/Menu/SaveMenuView.js" ></script>
