--- a/index.html
+++ b/index.html
@@ -35,18 +35,20 @@
         <script type="text/javascript" src="js/Modeles/Items.js" ></script>
         <script type="text/javascript" src="js/Modeles/Modele.js" ></script>
         <script type="text/javascript" src="js/Modeles/Effect.js" ></script>
+        <script type="text/javascript" src="js/Modeles/Potidex.js" ></script>
         <script type="text/javascript" src="js/View/Combat/CombatView.js" ></script>
         <script type="text/javascript" src="js/View/Menu/MainMenuView.js" ></script>
         <script type="text/javascript" src="js/View/Menu/SaveMenuView.js" ></script>
         <script type="text/javascript" src="js/View/Map/WorldMapView.js" ></script>
         <script type="text/javascript" src="js/View/worldMap.js"></script>
-        <script type="text/javascript" src="js/View/startingScreen.js" ></script>
         <script type="text/javascript" src="js/View/StartingScreenView.js" ></script>
+        <script type="text/javascript" src="js/View/PotidexView.js" ></script>
         <script type="text/javascript" src="js/Controller/CombatController.js" ></script>
         <script type="text/javascript" src="js/Controller/MainMenuController.js" ></script>
         <script type="text/javascript" src="js/Controller/SaveMenuController.js" ></script>
         <script type="text/javascript" src="js/Controller/StartingScreenController.js" ></script>
         <script type="text/javascript" src="js/Controller/WolrdMapController.js" ></script>
+        <script type="text/javascript" src="js/Controller/PotidexController.js" ></script>
         <script type="text/javascript" src="js/Monsters.js" ></script>
         <script type="text/javascript" src="js/Apps/Apps.js" ></script>
     </head>
