--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" type="text/css" href="Css/worldMap.css">
         <link rel="stylesheet" type="text/css" href="Css/Combat.css">
         <link rel="stylesheet" type="text/css" href="Css/StartingScreen.css">
+        <link rel="stylesheet" type="text/css" href="Css/Online.css">
         <script src="jquery/jquery-3.2.1.min.js"></script>
         <script src="jquery/jquery-ui-1.12.1/jquery-ui.min.js"></script>
         <script src="jquery/touchPunch/touch-punch.min.js"></script>
