refonte stats pokemon

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <script type="text/javascript" src="js/Helper/Array.js" ></script>
         <script type="text/javascript" src="js/Modeles/Ennemie.js" ></script>
         <script type="text/javascript" src="js/Modeles/GamingElement.js" ></script>
-        <script type="text/javascript" src="js/Modeles/Player.js" ></script>
+        <script type="text/javascript" src="js/Modeles/Potimon.js" ></script>
         <script type="text/javascript" src="js/Modeles/SaveFile.js" ></script>
         <script type="text/javascript" src="js/Modeles/Skill.js" ></script>
         <script type="text/javascript" src="js/Modeles/Details.js" ></script>
