refonte incrementation level

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <script type="text/javascript" src="js/Modeles/Effect.js" ></script>
         <script type="text/javascript" src="js/Modeles/Potidex.js" ></script>
         <script type="text/javascript" src="js/Modeles/User.js" ></script>
+        <script type="text/javascript" src="js/Modeles/ElementType.js" ></script>        
         <script type="text/javascript" src="js/View/Combat/CombatView.js" ></script>
         <script type="text/javascript" src="js/View/Menu/MainMenuView.js" ></script>
         <script type="text/javascript" src="js/View/Menu/SaveMenuView.js" ></script>
