paras, parasect et leur skills

--- a/Front/index.html
+++ b/Front/index.html
@@ -39,6 +39,7 @@
         <script type="text/javascript" src="js/Modeles/ElementType.js" ></script>        
         <script type="text/javascript" src="js/View/Combat/CombatView.js" ></script>
         <script type="text/javascript" src="js/View/Menu/MainMenuView.js" ></script>        
+        <script type="text/javascript" src="js/View/Menu/SaveMenuView.js" ></script> 
         <script type="text/javascript" src="js/View/Map/WorldMapView.js" ></script>
         <script type="text/javascript" src="js/View/OnlineView.js" ></script>        
         <script type="text/javascript" src="js/View/StartingScreenView.js" ></script>
@@ -55,6 +56,7 @@
         <script type="text/javascript" src="js/Controller/ProfilController.js" ></script>
         <script type="text/javascript" src="js/Controller/ShopController.js" ></script>
         <script type="text/javascript" src="js/Controller/StarterChoiceController.js" ></script>
+        <script type="text/javascript" src="js/Controller/SaveMenuController.js" ></script>
         <script type="text/javascript" src="js/DAO/Get.js" ></script>
         <script type="text/javascript" src="js/DTO/basePotimonDTO.js" ></script>        
         <script type="text/javascript" src="js/Apps/Apps.js" ></script>
