--- a/Front/index.html
+++ b/Front/index.html
@@ -20,6 +20,7 @@
         <script type="text/javascript" src="js/Helper/Animate.js" ></script>
         <script type="text/javascript" src="js/Helper/Array.js" ></script>
         <script type="text/javascript" src="js/Helper/GamingUtilities.js" ></script>
+        <script type="text/javascript" src="js/Helper/LocalStorage.js" ></script>
         <script type="text/javascript" src="js/Modeles/Ennemie.js" ></script>
         <script type="text/javascript" src="js/Modeles/GamingElement.js" ></script>
         <script type="text/javascript" src="js/Modeles/Potimon.js" ></script>
