--- a/Front/index.html
+++ b/Front/index.html
@@ -2,8 +2,7 @@
 <html lang="fr">
     <head>
         <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-        <link rel="stylesheet" media="(orientation:landscape)" type="text/css" href="Css/paysage.css ">
-        <link rel="stylesheet" media="(orientation:portrait)" type="text/css" href="Css/portrait.css ">
+        <link rel="stylesheet" type="text/css" href="Css/style.css ">
         <script src="jquery/jquery-3.2.1.min.js"></script>
         <script src="jquery/jquery-ui-1.12.1/jquery-ui.min.js"></script>
         <script src="jquery/touchPunch/touch-punch.min.js"></script>
