ajout menu déconnection

--- a/Front/index.html
+++ b/Front/index.html
@@ -46,6 +46,7 @@
         <script type="text/javascript" src="js/View/ProfilView.js" ></script>
         <script type="text/javascript" src="js/View/ShopView.js" ></script>
         <script type="text/javascript" src="js/View/StarterChoiceView.js" ></script>
+        <script type="text/javascript" src="js/View/Menu/DeconnectionMenuView.js" ></script>
         <script type="text/javascript" src="js/Controller/CombatController.js" ></script>
         <script type="text/javascript" src="js/Controller/MainMenuController.js" ></script>        
         <script type="text/javascript" src="js/Controller/StartingScreenController.js" ></script>
@@ -56,6 +57,7 @@
         <script type="text/javascript" src="js/Controller/ShopController.js" ></script>
         <script type="text/javascript" src="js/Controller/StarterChoiceController.js" ></script>
         <script type="text/javascript" src="js/Controller/SaveMenuController.js" ></script>
+        <script type="text/javascript" src="js/Controller/DeconnexionMenuController.js" ></script>
         <script type="text/javascript" src="js/DAO/Get.js" ></script>
         <script type="text/javascript" src="js/DTO/basePotimonDTO.js" ></script>        
         <script type="text/javascript" src="js/Apps/Apps.js" ></script>
