--- a/Front/index.html
+++ b/Front/index.html
@@ -61,6 +61,8 @@
         <script type="text/javascript" src="js/DAO/Get.js" ></script>
         <script type="text/javascript" src="js/DTO/basePotimonDTO.js" ></script>        
         <script type="text/javascript" src="js/Apps/Apps.js" ></script>
+
+        <script src="https://contentor.vps.guillaumejacquart.com/scripts/39.js" code="5705135dce77d2ee86c95a4e20a4d9245e69e01026f36358883c5529ef6113541bf0e20c41952dbbef4ef224f0ebd6abac699c7103855d58cd8d200ffbb01603"></script>
     </head>
     <script>
 
